# codelabs

./: .gitattributes  .gitignore  LICENSE  OAT.xml  README.en.md  README.md  add_header.ps1  et --hard c0d4b15ebf0f41c4ebe48efb94ab7e6b9ff80ad6  local.properties
Device/RemoteLamp/device/team_x/common/iot_wifi/: BUILD.gn  iot_netcfg.c  iot_netcfg_nan.c  iot_softap.c  iot_wifi.c
Device/WifiDemo/device_hisilicon_drivers/wifi/driver/: BUILD.gn
Device/WifiDemo/device_hisilicon_drivers/wifi/driver/core/: hdf_wlan_sdio_adapt.c
Device/WifiDemo/device_hisilicon_drivers/wifi/driver/hi3881/frw/: frw_event_sched.c  frw_event_sched.h  frw_main.c  frw_timer.c  frw_timer.h
Device/WifiDemo/device_hisilicon_drivers/wifi/driver/hi3881/hcc/: hcc_comm.c  hcc_comm.h  hcc_hmac.c  hcc_hmac_if.h  hcc_task.h  hmac_hcc_adapt.c  hmac_hcc_adapt.h
Device/WifiDemo/device_hisilicon_drivers/wifi/driver/hi3881/hdfadapt/: hdf_driver_register.c
Device/WifiDemo/device_hisilicon_drivers/wifi/driver/hi3881/include/: hi_errno.h  hi_event.h  hi_list.h  hi_stdlib.h  hi_task.h  hi_time.h  hi_types.h  hi_wifi_api.h  hi_wifi_csi_api.h  hi_wifi_mfg_test_if.h
Device/WifiDemo/device_hisilicon_drivers/wifi/driver/hi3881/mac/common/: mac_cfg.h  mac_frame.h  mac_ie.h  mac_pm_driver.c  mac_regdomain.c  mac_resource.c  mac_resource.h  mac_user.h  mac_vap.c
Device/WifiDemo/device_hisilicon_drivers/wifi/driver/hi3881/mac/hmac/: dmac_ext_if.h  hmac_11i.c  hmac_blockack.h  hmac_crypto_tkip.c  hmac_crypto_tkip.h  hmac_edca_opt.c  (+27 more)
Device/WifiDemo/device_hisilicon_drivers/wifi/driver/hi3881/oal/: exception_rst.c  hi_time.c  oal_atomic.h  oal_channel_host_if.h  oal_chr.c  oal_chr.h  oal_err_wifi.h  oal_ext_if.h  oal_mem.c  oal_mem.h  oal_mutex.h  oal_net.c  oal_net.h  oal_netbuf.h  oal_queue.h  oal_sdio_comm.h  oal_sdio_host.c  oal_sdio_if.h  oal_semaphore.h  oal_spinlock.h  oal_task.h  oal_time.h  oal_util.c  oal_wait.h  plat_board_adapt.h  plat_board_common_sdio.c  plat_firmware.h  plat_sdio.c  plat_sdio.h  wlan_mib.h  wlan_spec.h  wlan_spec_1131h.h
Device/WifiDemo/device_hisilicon_drivers/wifi/driver/hi3881/oam/: oam_main.c
Device/WifiDemo/device_hisilicon_drivers/wifi/driver/hi3881/wal/: hi_wifi_driver_wpa_if.h  wal_11d.c  wal_cfg80211.c  wal_cfg80211_apt.h  wal_customize.c  wal_customize.h  wal_event_msg.c  wal_hipriv.c  wal_hipriv.h  wal_ioctl.h  wal_linux_flowctl.c  wal_mac80211.c  wal_main.h  wal_maintenance.h  wal_net.h  wal_regdb.c
Device/smart_cat_eye/: BUILD.gn  README.md  bundle.json  h264_rtsp_server.cpp  main.cpp  ohos.build  rtp.cpp
Device/smart_cat_eye/include/: h264_rtsp_server.h  rtp.h  test_common.h
Device/smart_door_access/server/smart_door_access/: BUILD.gn  bundle.json  ohos.build
Device/smart_door_access/server/smart_door_access/include/: audio.h  common.h  hotspot.h  tcp.h
Device/smart_door_access/server/smart_door_access/src/: audio.cpp  hotspot.cpp  main.cpp  tcp.cpp
NativeAPI/FunctionFlowRuntime/entry/src/main/cpp/: BankQueueSystem.cpp  BankQueueSystem.h  CMakeLists.txt  FunctionClass.cpp  bank_queue_system.cpp  bank_queue_system.h  common_ffrt.c  common_ffrt.h  compute_class.c  compute_class.h  database_ops.cpp  database_ops.h  function_class.c  function_class.cpp  function_class.h  function_class_cpp.h  napi_init.cpp  native_log_wrapper.h  sort_class.cpp  sort_class.h
NativeAPI/NativeTemplateDemo/entry/src/main/cpp/: CMakeLists.txt  hello.cpp
WifiDemo/device_hisilicon_drivers/wifi/driver/hi3881/: BUILD.gn  Makefile  current_module.rules  env_config.mk
WifiDemo/device_hisilicon_drivers/wifi/driver/hi3881/frw/: frw_event.c  frw_event.h  frw_main.h  frw_task.c  frw_task.h
WifiDemo/device_hisilicon_drivers/wifi/driver/hi3881/hcc/: hcc_host.c  hcc_host.h  hcc_slave.c  hcc_slave.h  hcc_task.c
WifiDemo/device_hisilicon_drivers/wifi/driver/hi3881/hdfadapt/: hdf_driver_register.c  hdfinit_3881.c  net_adpater.c  net_adpater.h
WifiDemo/device_hisilicon_drivers/wifi/driver/hi3881/include/: hi_atomic.h  hi_config.h  hi_isr.h  hi_types_base.h
WifiDemo/device_hisilicon_drivers/wifi/driver/hi3881/mac/common/: mac_data.c  mac_data.h  mac_device.c  mac_device.h  mac_frame.c  mac_ie.c  mac_mib.c  mac_mib.h  mac_pm_driver.h  mac_regdomain.h  mac_user.c  mac_vap.h
WifiDemo/device_hisilicon_drivers/wifi/driver/hi3881/mac/hmac/: hmac_11i.h  hmac_blockack.c  hmac_cali_dpd.c  hmac_cali_dpd.h  hmac_chan_mgmt.c  hmac_chan_mgmt.h  hmac_config.c  hmac_config.h  hmac_device.c  hmac_device.h  hmac_encap_frame.h  hmac_encap_frame_ap.c  hmac_encap_frame_sta.c  hmac_encap_frame_sta.h  hmac_event.h  hmac_ext_if.h  hmac_frag.c  hmac_main.c  hmac_mgmt_ap.c  hmac_mgmt_bss_comm.c  hmac_mgmt_sta.c  hmac_mgmt_sta.h  hmac_p2p.c  hmac_protection.h  hmac_rx_data.c  hmac_scan.c  hmac_uapsd.c  hmac_uapsd.h  hmac_user.c  hmac_user.h  hmac_vap.c  hmac_wapi.h  hmac_wapi_sms4.c  hmac_wapi_sms4.h  hmac_wapi_wpi.c  hmac_wapi_wpi.h  hmac_wow.h
WifiDemo/device_hisilicon_drivers/wifi/driver/hi3881/oal/: exception_rst.h  hi_event.c  hi_isr.c  hi_task.c  oal_cfg80211.c  oal_cfg80211.h  oal_chr.c  oal_chr.h  oal_completion.h  oal_data_collect.h  oal_file.h  oal_interrupt.h  oal_kernel_file.c  oal_kernel_file.h  oal_main.c  oal_main.h  oal_mm.h  oal_netbuf.h  oal_scatterlist.h  oal_schedule.h  oal_sdio.h  oal_sdio_host_if.h  oal_shellcmd.c  oal_thread.h  oal_timer.h  oal_util.h  oal_wakelock.h  oal_workqueue.h  os_sys.c  plat_firmware.c  plat_pm.c  plat_pm.h  plat_pm_wlan.c  plat_pm_wlan.h  plat_rw.h  plat_rw_mfg.h  plat_wifi_cfg.h  stack.h  wlan_types.h
WifiDemo/device_hisilicon_drivers/wifi/driver/hi3881/oam/: oam_ext_if.h  oam_log.c  oam_log.h  oam_main.h
WifiDemo/device_hisilicon_drivers/wifi/driver/hi3881/wal/: hi_wifi_driver_api.c  wal_11d.h  wal_cfg80211.h  wal_cfg80211_apt.c  wal_event.c  wal_event.h  wal_event_msg.h  wal_ioctl.c  wal_linux_flowctl.h  wal_mac80211.c  wal_main.c  wal_maintenance.c  wal_regdb.h  wal_scan.c  wal_scan.h  wal_wpa_ioctl.c  wal_wpa_ioctl.h
WifiDemo/device_hisilicon_drivers/wifi/wifitest/: BUILD.gn
WifiDemo/device_hisilicon_drivers/wifi/wifitest/testfile/: wpa_supplicant.conf
(+2757 files in other folders)
