# Copyright (c) 2020 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

if (defined(ohos_lite)) {
  import("//build/lite/config/component/lite_component.gni")
} else {
  import("//build/ohos.gni")
}

if (defined(ohos_lite)) {
  copy("wifi_test") {
  sources = [ "./testfile" ]
    outputs = [ "$root_out_dir/vendor/wifitest" ]
  }
} else {
  ohos_prebuilt_etc("busybox") {
    source = "testfile/busybox"
    module_install_dir = "bin"
    install_images = [ "system" ]
    part_name = "hdf"
  }
  ohos_prebuilt_etc("hostapdconf") {
    source = "testfile/hostapd.conf"
    module_install_dir = "wifitest"
    install_images = [ "vendor" ]
    part_name = "hdf"
  }
  ohos_prebuilt_etc("iperf") {
    source = "testfile/iperf"
    module_install_dir = "bin"
    install_images = [ "system" ]
    part_name = "hdf"
  }
  ohos_prebuilt_etc("wpa_supplicantconf") {
    source = "testfile/wpa_supplicant.conf"
    module_install_dir = "wifitest"
    install_images = [ "vendor" ]
    part_name = "hdf"
  }
  ohos_prebuilt_etc("udhcpdconf") {
    source = "testfile/udhcpd.conf"
    module_install_dir = "wifitest"
    install_images = [ "vendor" ]
    part_name = "hdf"
  }
  group("wifi_test") {
    deps = [
      ":busybox",
      ":hostapdconf",
      ":iperf",
      ":wpa_supplicantconf",
      ":udhcpdconf",
    ]
  }
}
