# Copyright (c) 2021 HiSilicon (Shanghai) Technologies CO., LIMITED.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//drivers/adapter/khdf/liteos/hdf.gni")

module_switch = defined(LOSCFG_DRIVERS_HDF_WIFI)
module_name = "hdf_vendor_wifi"

HDM_WIFI_ROOT = "//drivers/framework/model/network/wifi"

hdf_driver(module_name) {
  sources = [ "core/hdf_wlan_sdio_adapt.c" ]
  include_dirs = [
    "$HDM_WIFI_ROOT/include",
    "$HDM_WIFI_ROOT/platform/include",
    "$HDM_WIFI_ROOT/core",
    "//drivers/peripheral/wlan/client/include",
    "hi3881/linuxkpi/include",
  ]
}
