# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

config_file = [
    "libs/libnetcfgdevicesdk.a",
    "libs/libhilinkadapter_3861.a",
    "libs/libHwKeystoreSDK.a"
]

copy("config") {
    sources = config_file
    outputs = [ "$root_build_dir/libs/{{source_file_part}}" ]
}

static_library("iot_wifi") {
    sources = [
        "iot_wifi.c",
        "iot_softap.c",
        "iot_netcfg.c",
        "iot_netcfg_nan.c"
    ]
    
    cflags = [ "-Wno-unused-variable" ]
    cflags += [ "-Wno-unused-but-set-variable" ]
    cflags += [ "-Wno-unused-parameter" ]
    
    include_dirs = [
        "//foundation/communication/wifi_lite/interfaces/wifiservice",
        "//third_party/mbedtls/include/mbedtls",
        "//kernel/liteos_m/kal/cmsis",
        "//third_party/cJSON",
        "../inc",
    ]

    deps = [ 

    ]

}
